--- a/home.html
+++ b/home.html
@@ -10,11 +10,11 @@
 <body>
 	<div id="wrapper">
 		<div id="main-content" class="container">
-			<div style="background-color: #9e9e9ed9;" class="jumbotron">
+			<div style="background-color: #9e9e9e6b;" class="jumbotron">
 				<h1>Friend Finder</h1>
 				<p>Answer a few basic questions.</p>
 				<p>Then find the friend with the greatest compatibility!</p>
-				<a class="btn btn-primary btn-lg" href="./survey.html" role="button"><span class="glyphicon glyphicon-list"></span>Go to Survey</a>
+				<a class="btn btn-primary btn-lg" href="./public/survey.html" role="button"><span class="glyphicon glyphicon-list"></span>Go to Survey</a>
 			</div>
 		</div>
 	</div>
